# dess2-bogaloo

./: .gitignore  AGENTS.md  LINKS.md  Makefile  README.md  SPEC.md  TASKS.md  pyproject.toml
.devcontainer/: devcontainer.json
rapports/: README.md
rapports/single_target_gas_turbine/: report.md  summary.csv
rapports/single_target_gas_turbine/dual_head_detached_sigma/seed_42/: gas_turbine_dual_head_detached_sigma_seed42.history.csv  gas_turbine_dual_head_detached_sigma_seed42.metadata.json  gas_turbine_dual_head_detached_sigma_seed42.metrics.json
rapports/single_target_gas_turbine/dual_head_detached_sigma/seed_43/: gas_turbine_dual_head_detached_sigma_seed43.history.csv  gas_turbine_dual_head_detached_sigma_seed43.metadata.json  (+1 more)
rapports/sqid_reranking/: best_variant_vs_sbert_query_deltas.csv  dess_variant_summary.csv  report.md
rapports/sqid_reranking/reproduction/: best_fusion.json  fusion_summary.csv  summary.csv
rapports/sqid_sampling/: aggregate_summary.csv  summary.csv
scripts/: download_data.py  evaluate.py  init_project.py  make_report.py  make_single_target_report.py  run_dess_sampling.py  run_reproduction.py  run_single_target_dess.py  train_dess.py
src/dess2_bogaloo/: __init__.py  baselines.py  data.py  dess_model.py  dess_original.py  dess_sampling.py  dess_updated.py  eval.py  single_target.py  train.py  utils.py
src/template_repo/: __init__.py
tests/: __init__.py  test_data.py  test_dess.py  test_dess_sampling.py  test_eval.py  test_init_project.py  test_package.py  test_single_target.py
(+82 files in other folders)
