[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dess2-bogaloo"
version = "0.1.0"
description = "Lean SQID reranking reproduction with a gated DESS extension."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=1.1.0",
    "datasets>=3.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "sentence-transformers>=3.0",
    "torch>=2.10,<2.11",
    "transformers>=4.44",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
